fix: corregir ruta de build Docker en workflow de seguridad
- Usar GITHUB_WORKSPACE para volver a la raíz del proyecto
- Evitar error 'path ./front-end not found'

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -234,7 +234,8 @@ jobs:
 
       - name: 🐳 Construir Imagen Frontend
         run: |
-          cd front-end/portafolio && npm ci && cd ..
+          cd front-end/portafolio && npm ci
+          cd $GITHUB_WORKSPACE
           docker build -t portfolio-frontend:scan ./front-end
 
       - name: 🛡️ Trivy - Escaneo Vulnerabilidades Contenedor (Frontend)
