fix: corregir Dockerfile frontend para estructura portafolio/ - Dockerfile ahora referencia correctamente portafolio/package.json - Copiar archivos desde portafolio/ subcarpeta - Actualizar path de dist a dist/portafolio/browser - Eliminar paso npm ci redundante en workflow

--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -3,27 +3,25 @@ FROM node:18-alpine as build
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package.json and package-lock.json from portafolio subdirectory
+COPY portafolio/package*.json ./
 
 # Install dependencies
 RUN npm ci
 
-# Copy the rest of the application code
-COPY . .
+# Copy the rest of the application code from portafolio
+COPY portafolio/ .
 
 # Build the application for production
-# Adjust the output path if your regular build uses a different directory content
 RUN npm run build -- --configuration production
 
 # Stage 2: Serve the application with Nginx
 FROM nginx:alpine
 
 # Copy the built artifacts from the previous stage
-# Verify the path 'dist/portafolio' matches your angular.json output path
-COPY --from=build /app/dist/portafolio /usr/share/nginx/html
+COPY --from=build /app/dist/portafolio/browser /usr/share/nginx/html
 
-# Copy custom Nginx configuration
+# Copy custom Nginx configuration (from root of front-end context)
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
