fix: remover starlette explicito para evitar conflicto con FastAPI FastAPI 0.115.6 requiere starlette<0.42.0, se deja que pip lo resuelva automaticamente

--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -7,7 +7,7 @@
 # Core Framework
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
-starlette==0.45.3
+# starlette se instala automáticamente con FastAPI (versión compatible)
 
 # Database
 sqlalchemy==2.0.36
