fix: fijar versiones Python 3.10 y Node 18 para evitar incompatibilidades - Agregar ignore en dependabot.yml para Python >=3.13 y Node >=23 - Documentar restriccion de versiones en Dockerfiles - pydantic-core (PyO3) no soporta Python 3.14+

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -83,6 +83,10 @@ updates:
       - "docker"
     commit-message:
       prefix: "chore(docker)"
+    # Ignorar actualizaciones de Python > 3.12 (pydantic-core no soporta 3.14)
+    ignore:
+      - dependency-name: "python"
+        versions: [">=3.13"]
 
   - package-ecosystem: "docker"
     directory: "/front-end"
@@ -93,6 +97,10 @@ updates:
       - "docker"
     commit-message:
       prefix: "chore(docker)"
+    # Ignorar actualizaciones de Node > 22 (LTS actual)
+    ignore:
+      - dependency-name: "node"
+        versions: [">=23"]
 
   # ============================================
   # 🔧 GitHub Actions
