--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,4 +1,5 @@
 # Stage 1: Build the Angular application
+# NOTA: Mantener Node 18 LTS para compatibilidad con Angular 16
 FROM node:18-alpine AS build
 
 WORKDIR /app
