--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,85 @@
-# ==================================
-# PRODUCTION ENVIRONMENT TEMPLATE
-# ==================================
-# Copy this file to .env and fill in the actual values
+# ============================================
+# PORTFOLIO APPLICATION - ENVIRONMENT VARIABLES
+# ============================================
+# Copy this file to .env and fill in actual values
 # NEVER commit .env to version control!
+# ============================================
 
-# ==================================
-# Database Configuration
-# ==================================
+# ==========================================
+# DATABASE - MySQL 8.0
+# ==========================================
 MYSQL_DATABASE=portfolio_db
 MYSQL_USER=portfolio_user
-MYSQL_PASSWORD=your_secure_password_here
-MYSQL_ROOT_PASSWORD=your_secure_root_password_here
+MYSQL_PASSWORD=change_this_secure_password
+MYSQL_ROOT_PASSWORD=change_this_root_password
 
-# ==================================
-# JWT & Security
-# ==================================
+# ==========================================
+# REDIS CACHE (Optional)
+# ==========================================
+REDIS_PASSWORD=change_this_redis_password
+
+# ==========================================
+# JWT & SECURITY
+# ==========================================
 # Generate with: openssl rand -hex 32
-SECRET_KEY=your_256bit_secret_key_here
+SECRET_KEY=generate_256bit_secret_key_here
 
 # Generate with: openssl rand -hex 32
-CSRF_SECRET_KEY=your_csrf_secret_key_here
+CSRF_SECRET_KEY=generate_csrf_secret_key_here
 
-# ==================================
-# Application Settings
-# ==================================
+# ==========================================
+# APPLICATION SETTINGS
+# ==========================================
+APP_NAME=Portfolio Backend
+APP_VERSION=1.0.0
 DEBUG=false
+
+# Uvicorn workers (recommended: 2 * CPU cores + 1)
+UVICORN_WORKERS=2
+
+# ==========================================
+# COOKIE SECURITY
+# ==========================================
+# Production: true (requires HTTPS)
 COOKIE_SECURE=true
+
+# Options: strict, lax, none
 COOKIE_SAMESITE=strict
+
+# Your domain (leave empty for localhost)
 COOKIE_DOMAIN=.yourdomain.com
 
-# ==================================
-# CORS Origins (comma-separated)
-# ==================================
+# ==========================================
+# CORS - Allowed Origins
+# ==========================================
+# Comma-separated list of allowed origins
 CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
-# ==================================
-# Rate Limiting
-# ==================================
-RATE_LIMIT_PER_MINUTE=60
-LOGIN_RATE_LIMIT=5/minute
+# ==========================================
+# PORTS
+# ==========================================
+FRONTEND_PORT=80
+# FRONTEND_SSL_PORT=443
+
+# ==========================================
+# TIMEZONE
+# ==========================================
+TZ=America/Mexico_City
+
+# ==========================================
+# OPTIONAL: S3 STORAGE
+# ==========================================
+# STORAGE_TYPE=s3
+# S3_BUCKET=your-bucket-name
+# S3_REGION=us-east-1
+# S3_ACCESS_KEY=your_access_key
+# S3_SECRET_KEY=your_secret_key
+
+# ==========================================
+# OPTIONAL: EMAIL (SMTP)
+# ==========================================
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your_email@gmail.com
+# SMTP_PASSWORD=your_app_password
+# SMTP_FROM=noreply@yourdomain.com
