--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,28 +1,77 @@
-# Use an official Python runtime as a parent image
-# NOTA: Mantener Python <= 3.12. pydantic-core (PyO3) no soporta Python 3.14+
-FROM python:3.10-slim
+# ============================================
+# Portfolio Backend - Production Dockerfile
+# ============================================
+# Multi-stage build for optimized production image
+# Python 3.10 + FastAPI + Uvicorn
+# ============================================
 
-# Set the working directory in the container
+# Stage 1: Builder
+FROM python:3.10-slim AS builder
+
 WORKDIR /app
 
-# Install system dependencies needed for mysqlclient/cryptography
-# hadolint ignore=DL3008
+# Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     default-libmysqlclient-dev \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy the requirements file into the container at /app
-COPY requirements.txt /app/
+# Install Python dependencies in virtual env
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code
-COPY . /app/
 
-# Make port 8000 available to the world outside this container
+# Stage 2: Production
+FROM python:3.10-slim AS production
+
+# Labels
+LABEL maintainer="Elvis Portfolio <admin@elvisdeveloper.com>"
+LABEL description="Portfolio Backend API - FastAPI"
+LABEL version="1.0.0"
+
+# Environment
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONFAULTHANDLER=1 \
+    PATH="/opt/venv/bin:$PATH" \
+    APP_HOME=/app
+
+WORKDIR $APP_HOME
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    default-libmysqlclient-dev \
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+# Create non-root user for security
+RUN groupadd --gid 1000 appgroup && \
+    useradd --uid 1000 --gid appgroup --shell /bin/bash --create-home appuser
+
+# Copy virtual env from builder
+COPY --from=builder /opt/venv /opt/venv
+
+# Copy application code
+COPY --chown=appuser:appgroup . .
+
+# Create uploads directory with correct permissions
+RUN mkdir -p uploads && chown -R appuser:appgroup uploads
+
+# Switch to non-root user
+USER appuser
+
+# Expose port
 EXPOSE 8000
 
-# Run commands are handled by docker-compose
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Default command (can be overridden by docker-compose)
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
