--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,149 @@
+# ============================================
+# Portfolio Application - Docker Compose
+# ============================================
+# Production-ready configuration
+# Services: MySQL, Redis, Backend (FastAPI), Frontend (Angular + Nginx)
+# ============================================
+
 version: '3.8'
 
 services:
+  # ==========================================
+  # Database - MySQL 8.0
+  # ==========================================
   db:
     image: mysql:8.0
     container_name: portfolio_db
-    restart: always
+    restart: unless-stopped
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE:-portfolio_db}
       MYSQL_USER: ${MYSQL_USER:-portfolio_user}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:?MYSQL_PASSWORD is required}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?MYSQL_ROOT_PASSWORD is required}
+      TZ: ${TZ:-America/Mexico_City}
     volumes:
       - db_data:/var/lib/mysql
+      - ./docker/mysql/init:/docker-entrypoint-initdb.d:ro
     networks:
       - portfolio_network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
+  # ==========================================
+  # Cache - Redis (Optional)
+  # ==========================================
+  redis:
+    image: redis:7-alpine
+    container_name: portfolio_redis
+    restart: unless-stopped
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis_secret}
+    volumes:
+      - redis_data:/data
+    networks:
+      - portfolio_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_secret}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # ==========================================
+  # Backend - FastAPI + Uvicorn
+  # ==========================================
   backend:
-    build: 
+    build:
       context: ./back-end
       dockerfile: Dockerfile
+      target: production
     container_name: portfolio_backend
-    restart: always
-    command: sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
+    restart: unless-stopped
+    command: >
+      sh -c "
+        echo 'Waiting for database...' &&
+        sleep 10 &&
+        echo 'Running migrations...' &&
+        alembic upgrade head &&
+        echo 'Starting server...' &&
+        uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-2}
+      "
     volumes:
-      - ./back-end:/app
+      # Persistent uploads directory
+      - uploads_data:/app/uploads
+      # Development: uncomment for hot reload
+      # - ./back-end:/app
     environment:
-      - DATABASE_URL=mysql+pymysql://${MYSQL_USER:-portfolio_user}:${MYSQL_PASSWORD}@db/${MYSQL_DATABASE:-portfolio_db}
-      - SECRET_KEY=${SECRET_KEY:?SECRET_KEY is required}
-      - CSRF_SECRET_KEY=${CSRF_SECRET_KEY:-}
-      - DEBUG=${DEBUG:-false}
-      - COOKIE_SECURE=${COOKIE_SECURE:-true}
-      - COOKIE_SAMESITE=${COOKIE_SAMESITE:-strict}
-      - COOKIE_DOMAIN=${COOKIE_DOMAIN:-}
-      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:4200}
+      # Database
+      DATABASE_URL: mysql+pymysql://${MYSQL_USER:-portfolio_user}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE:-portfolio_db}
+      # Security
+      SECRET_KEY: ${SECRET_KEY:?SECRET_KEY is required}
+      CSRF_SECRET_KEY: ${CSRF_SECRET_KEY:-}
+      # App Settings
+      DEBUG: ${DEBUG:-false}
+      APP_NAME: ${APP_NAME:-Portfolio Backend}
+      APP_VERSION: ${APP_VERSION:-1.0.0}
+      # Cookies
+      COOKIE_SECURE: ${COOKIE_SECURE:-true}
+      COOKIE_SAMESITE: ${COOKIE_SAMESITE:-strict}
+      COOKIE_DOMAIN: ${COOKIE_DOMAIN:-}
+      # CORS
+      CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost}
+      # Redis (optional)
+      REDIS_URL: redis://:${REDIS_PASSWORD:-redis_secret}@redis:6379/0
+      # Timezone
+      TZ: ${TZ:-America/Mexico_City}
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - portfolio_network
+    expose:
+      - "8000"
 
+  # ==========================================
+  # Frontend - Angular + Nginx
+  # ==========================================
   frontend:
     build:
       context: ./front-end
       dockerfile: Dockerfile
+      target: production
     container_name: portfolio_frontend
-    restart: always
+    restart: unless-stopped
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT:-80}:80"
+      # HTTPS (when using SSL)
+      # - "${FRONTEND_SSL_PORT:-443}:443"
     depends_on:
       - backend
     networks:
       - portfolio_network
+    # Optional: mount SSL certificates for HTTPS
+    # volumes:
+    #   - ./docker/nginx/ssl:/etc/nginx/ssl:ro
 
+# ==========================================
+# Volumes - Persistent Data
+# ==========================================
 volumes:
   db_data:
+    driver: local
+    name: portfolio_db_data
+  redis_data:
+    driver: local
+    name: portfolio_redis_data
+  uploads_data:
+    driver: local
+    name: portfolio_uploads_data
 
+# ==========================================
+# Networks
+# ==========================================
 networks:
   portfolio_network:
     driver: bridge
+    name: portfolio_network
