--- a/front-end/portafolio/package.json
+++ b/front-end/portafolio/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:cloudflare": "ng build --configuration=production --output-path=dist/cloudflare",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
